# pgdump2bq

./: README.md  pyproject.toml
sql/: nationbuilder.sql
src/pgdump2bq/: __main__.py  dump_all_tables.py  fix_table_schema.py  postgres.py
src/pgdump2csv/: fix_table_schema.py  main.py  subprocess_helper.py
