[project]
name = "pgdump2bq"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "craig", email = "craiig@gmail.com" }
]
dependencies = [
    "psycopg2>=2.9.9",
    "retry>=0.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pgdump2bq"]
